--- a/src/content/posts/demo/富有表现力的代码示例.md
+++ b/src/content/posts/demo/富有表现力的代码示例.md
@@ -1,8 +1,9 @@
 ---
-title: Expressive Code Example
+title: 富有表现力的代码示例
 published: 2024-04-10
-description: How code blocks look in Markdown using Expressive Code.
-tags: [Markdown, Blogging, Demo]
+update: 2025-08-20
+description: 使用表达性代码的代码块在 Markdown 中的外观。
+tags: [Markdown, Blog]
 category: Examples
 draft: false
 ---
