--- a/src/content/posts/demo/富有表现力的代码示例.md
+++ b/src/content/posts/demo/富有表现力的代码示例.md
@@ -1,9 +1,9 @@
 ---
-title: 富有表现力的代码示例
-published: 2024-04-10
-update: 2025-08-20
-description: 使用表达性代码的代码块在 Markdown 中的外观。
-tags: [Markdown, Blog]
+title: Fuwari中富有表现力的代码示例
+published: 2025-08-20
+update: 2025-08-21
+description: 在Fuwari中使用表达性代码的代码块在 Markdown 中的外观。
+tags: [Markdown, Fuwari]
 category: 示例
 draft: false
 ---
