--- a/src/content/posts/2025/08/21/我的博客站点正式上线啦！.md
+++ b/src/content/posts/2025/08/21/我的博客站点正式上线啦！.md
@@ -1,7 +1,7 @@
 ---
 title: 我的博客站点正式上线啦！
 published: 2025-08-21
-description: '嘿嘿嘿嘿嘿嘿嘿嘿嘿，我的博客也是正式上线了。搭建博客这件事情在寒假的时候就想做了，但是本人比较懒硬是拖到了暑假才搞定。'
+description: ''
 image: ''
 tags: ["随笔"]
 category: '记录'
@@ -9,9 +9,9 @@ draft: false
 lang: ''
 ---
 
-嘿嘿嘿嘿嘿嘿嘿嘿嘿，我的博客也是正式上线了。搭建博客这件事情在寒假的时候就想做了，但是本人比较懒硬是拖到了暑假才搞定。不过很巧的是，之前我原本是想用hexo上的一个模板作为框架的，没想到暑假刷视频的时候看到了二叉树树的视频，了解到了fuwari这个博客框架，也是满足了我对博客模板的很多想想。
+嘿嘿嘿嘿嘿嘿嘿嘿嘿，我的博客也是正式上线了。搭建博客这件事情在去年寒假的时候就想做了，但是本人比较懒硬是拖到了暑假才搞定。不过很巧的是，之前我原本是想用hexo或者hugo上的一个模板作为框架的，没想到暑假刷视频的时候看到了二叉树树的视频，了解到了fuwari这个博客框架，也是满足了我对博客模板的很多想象。
 
-​	后续我也会多多在这个站点上更新博客的。毕竟攒了一年的文章可不是白写的，最近回整理一下慢慢发出来啦。
+​后续我也会多多在这个站点上更新博客的。毕竟攒了一年的文章可不是白写的，最近回整理一下慢慢发出来啦。
 
 ![image-20250821141203252](./img/我的博客站点正式上线啦！/image-20250821141203252.png)
 
